# umink-core

./: .clang-format  .gitignore  .ycm_extra_conf.py  CHANGELOG.md  LICENSE  Makefile.am  README.md  autogen.sh  cog.toml  configure.ac  sonar-project.properties
.github/workflows/: c-cpp.yml  on_push.yml
scripts/: git-version-gen
src/include/: cmocka_tests.h  spscq.h  umatomic.h  umcounters.h  umdaemon.h  umdb.h  umink_plugin.h  umlua.h  umrpc.h
src/services/sysagent/: sysagentd.c  umlua.c  umlua_m.c
src/services/sysagent/plugins/mosquitto_auth/: Makefile.am  plg_mosquitto_auth.c  plg_mosquitto_auth_v5.c
src/services/sysagent/plugins/mqtt/: Makefile.am  mqtt_umlua.c  plg_sysagent_mqtt.c
src/services/sysagent/plugins/openwrt/: Makefile.am  plg_sysagent_openwrt.c
src/umd/: umdaemon.c
src/utils/: umcounters.c  umdb.c  umink_plugin.c  umrpc.c
test/: check_mqtt.c  check_openwrt.c  check_umc.c  check_umd.c  check_umdb.c  check_umlua.c  check_umplg.c  check_umplg_plugin_01.c  mqtt_rx_test.lua  mqtt_test_01.lua  mqtt_test_02.lua  mqtt_test_03.lua  mqtt_test_04.lua  plg_cfg.json  plg_cfg_err.json  plg_cfg_err_ncs.json  plg_cfg_mqtt.json  plg_cfg_mqtt_err_01.json  plg_cfg_mqtt_err_02.json  plg_cfg_mqtt_err_03.json  plg_cfg_mqtt_err_04.json  plg_cfg_mqtt_err_05.json  plg_cfg_mqtt_err_06.json  plg_cfg_mqtt_err_07.json  plg_cfg_ncs.json  test.db  test_bin_upload.sh  test_env.lua  test_env_err.lua  test_env_syntax_err.lua  test_event_01.lua  test_event_01_err.lua  test_event_01_syntax_err.lua  test_event_02.lua  test_event_02_err.lua  test_event_03.lua  test_event_04.lua  test_event_05.lua  test_event_05a.lua  test_event_06.lua  (+5 more)
